data/test/type_check/fail/instantiation_1.v
// More arguments than declared ports

module foo();
endmodule

wire x;
foo f(x);

initial $finish;
